# cpp-client

./: .gitignore  CMakeLists.txt  EnigmaShowdown.sln  EnigmaShowdown.vcxproj  EnigmaShowdown.vcxproj.filters  README.md  TSQueue.h  clientBackend.cpp  clientBackend.h  enigmaShowdownCommunicationClient.cpp  enigmaShowdownCommunicationClient.h  enigmaShowdownVariables.h  main.cpp  playerCode.cpp  playerCode.h
customClientVariables/: barrierTiles.cpp  barrierTiles.hpp  connectionRequest.cpp  connectionRequest.h  conquestAction.cpp  conquestAction.hpp  conquestStateView.cpp  conquestStateView.hpp  entityState.cpp  entityState.hpp  entityType.hpp  levelStateBroadcast.cpp  levelStateBroadcast.hpp  mapCordinate.cpp  mapCordinate.hpp  moveAction.cpp  moveAction.hpp  playerActionRequest.cpp  playerActionRequest.hpp  vec2.cpp  vec2.hpp
